--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,1 +1,8 @@
 // @use "reset";
+
+@use "lesson-05/variables";
+@use "lesson-05/button";
+@use "lesson-05/scopes";
+
+/*  == END ==  */
+@use "lesson-05/base";
