--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,8 @@
-@use "lesson-05/variables";
-@use "lesson-05/button";
-@use "lesson-05/scopes";
+// @use "lesson-05/variables";
+// @use "lesson-05/button";
+// @use "lesson-05/scopes";
+// @use "lesson-05/base";
 
-/*  == END ==  */
-@use "lesson-05/base";
+// @use "lesson-06/nesting";
+// @use "lesson-06/combinators";
+@use "lesson-06/ampersand";
