--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,4 +5,8 @@
 
 // @use "lesson-06/nesting";
 // @use "lesson-06/combinators";
-@use "lesson-06/ampersand";
+// @use "lesson-06/ampersand";
+
+// @use "lesson-07/math";
+// @use "lesson-07/task";
+// @use "lesson-07/badge";
