--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,4 +11,6 @@
 // @use "lesson-07/task";
 // @use "lesson-07/badge";
 
-@use "lesson-09/extend";
+// @use "lesson-09/extend";
+
+@use "lesson-10/mixins";
