--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,4 +13,8 @@
 
 // @use "lesson-09/extend";
 
-@use "lesson-10/mixins";
+// @use "lesson-10/mixins";
+
+// @use "lesson-11/if";
+// @use "lesson-11/each";
+@use "lesson-11/for";
