--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,4 +17,6 @@
 
 // @use "lesson-11/if";
 // @use "lesson-11/each";
-@use "lesson-11/for";
+
+@use "lesson-12/examples";
+@use "lesson-12/_functions.scss";
