--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,5 +18,7 @@
 // @use "lesson-11/if";
 // @use "lesson-11/each";
 
-@use "lesson-12/examples";
-@use "lesson-12/_functions.scss";
+// @use "lesson-12/examples";
+// @use "lesson-12/_functions.scss";
+
+@use "lesson-13/list";
