--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,4 +21,8 @@
 // @use "lesson-12/examples";
 // @use "lesson-12/_functions.scss";
 
-@use "lesson-13/list";
+// @use "lesson-13/list";
+
+@use "lesson-14/colors";
+@use "lesson-14/map";
+@use "lesson-14/alers";
